[package]
name = "web_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.2.10", features = ["js"] }
nalgebra = "0.29.0"
num-traits = "0.2.15"
once_cell = "*"
rand = "0.8.5"
statrs = "0.16.0"
plotters = "0.3.5"
plotters-canvas = "0.3.0"
wasm-bindgen = { version = "0.2.87" }
web-sys = { version = "0.3.64", features = [
    "Document",
    "HtmlCanvasElement",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
] }
